# python-project-52

./: Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
languages/: db.sqlite3  manage.py
languages/languages/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/admin/js/: urlify.js
staticfiles/bootstrap/css/: bootstrap-reboot.rtl.css.map:Zone.Identifier
task_manager/: db.sqlite3  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_remove_labels_updated_at.py
task_manager/labels/tests/: test_views.py
task_manager/locale/: messages.pot
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_remove_statuses_updated_at.py
task_manager/statuses/tests/: test_views.py
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_remove_tasks_executor_tasks_author.py  0003_remove_tasks_author_tasks_executor.py  0003_rename_label_tasks_labels.py  0004_alter_tasks_managers.py  0005_alter_tasks_managers.py  0006_tasks_author.py  (+6 more)
task_manager/temp/: db.sqlite3
task_manager/templates/: base.html  base__.html  create.html  index.html  login.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: create.html
(+40 files in other folders)
